# necrotongue

./: .gitignore  README.md  example.env  pyproject.toml
necrotongue/: app.py  audio_recorder.py  config.py  entrypoint.py  input_monitor.py  prompt.py  show_key_stroke.py  transcriber.py
